--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    m_b_data = {'x': x_values, 'y': list(map(lambda x: m * x \n",
+    "    m_b_data = {'x': x_values, 'y': list(map(lambda x: m * x + b, x_values\n",
     "    pass"
    ]
   },
