--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    m_b_\n",
+    "    m_b_data(m, b, x_values), \n",
     "    pass"
    ]
   },
