--- a/index.ipynb
+++ b/index.ipynb
@@ -313,26 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-3aa623561880>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-3aa623561880>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    m_b_data(m, b, x_values).update({'mode:' mode, 'name': name})\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    m_b_data(m, b, x_values).update({'mode:' mode, 'name': name})"
+    "    retm_b_data(m, b, x_values).update({'mode': mode, 'name': name})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
