--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    m_b_trace = m_b_data(m, b, x_values)\n",
-    "    m_b_trace.update({'mode': mode, 'name': name})\n",
+    "    m_b_data(m, b, x_values)).update({'mode': mode, 'name': name})\n",
     "    return m_b_trace"
    ]
   },
