--- a/index.ipynb
+++ b/index.ipynb
@@ -313,28 +313,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    m_b_trace = m_b_data(m, b, x_values)\n",
-    "    m_b_data(m, b, x_values).update({'mode': mode, 'name': name})\n",
+    "    m_b_trace.update({'mode': mode, 'name': name})\n",
     "    return m_b_trace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
+       "{'x': [0, 50, 100],\n",
+       " 'y': [20.0, 95.0, 170.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'line function'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
