Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    sorted_points = sorted_points(x_values, y_values)\n",
-    "    (sorted_points[-1][1] - sorted_points[0][1])\n",
+    "    (sorted_points[-1][1] - sorted_points[0][1]) / (sorted_points[-1])\n",
     "    pass"
    ]
   },
