--- a/index.ipynb
+++ b/index.ipynb
@@ -608,6 +608,8 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
+    "    if m == None:\n",
+    "        m\n",
     "    pass"
    ]
   },
