--- a/index.ipynb
+++ b/index.ipynb
@@ -610,7 +610,7 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
-    "    return y"
+    "    return y_values[0] - m * "
    ]
   },
   {
