--- a/index.ipynb
+++ b/index.ipynb
@@ -669,7 +669,7 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    \n",
+    "    return {'m':}\n",
     "    pass"
    ]
   },
